# notecard-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: card.rs  dfu.rs  hub.rs  lib.rs  note.rs  ntn.rs  web.rs
