[package]
name = "blues-notecard"
version = "0.5.0"
edition = "2024"
authors = [ "Gaute Hope <eg@gaute.vetsj.com>" ]
license = "MIT"
description = "A driver for the Blues.io Notecard"
repository = "https://github.com/gauteh/notecard-rs"

[dependencies]
defmt = "1.0"
embedded-hal = "1.0"
heapless = { version = "0.7", features = [ "serde", "ufmt-impl", "defmt-impl" ] }
serde = { version = "1", features = ["derive"], default-features = false }
serde-json-core = "0.5.1"

[dev-dependencies]
base64 = { version = "0.13.0", default-features = false }
bytemuck = "1.7.2"
embedded-hal-mock = "0.11"
serde_path_to_error = "0.1.16"
serde_json = "1.0.138"

[features]
default = [ ]
testing = [ "defmt/unstable-test" ]
